discussion/kv_engine/174040/174040_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51877: Add a command to set the throttle limits

Allow for an external component to set the limits used for
throttling for a given bucket:

    mcthrottlectl --throttle-limit 200000 mybucket

Change-Id: I76dde6a4e09e086869c2b1968f49d5e7e9829eb8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-04-26 06:18:23.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-26 06:43:04.000000000
Message: 
Patch Set 10: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16979/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:92:38: error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand" [clang-diagnostic-error]
            adminConnection->execute(SetBucketComputeUnitThrottleLimitCommand{
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1275:5: note: candidate constructor not viable: requires at most 2 arguments, but 5 were provided
    SetBucketComputeUnitThrottleLimitCommand(const std::string& key_,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1273:7: note: candidate constructor (the implicit copy constructor) not viable: requires 1 argument, but 5 were provided
class SetBucketComputeUnitThrottleLimitCommand : public BinprotGenericCommand {
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/protocol/connection/client_mcbp_commands.h:1273:7: note: candidate constructor (the implicit move constructor) not viable: requires 1 argument, but 5 were provided

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16979/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16979/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45622/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_elixir.cc(92): error C2440: "initializing": cannot convert from "initializer list" to "SetBucketComputeUnitThrottleLimitCommand" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45622/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6731/ : FAILURE

Compile error at [2022-04-26T06:42:42.984Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6731/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6638/ : FAILURE

Compile error at [2022-04-26T06:28:27.655Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6638/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17885/ : FAILURE

Compile error at [2022-04-26T06:32:44.417Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17885/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19107/ : FAILURE

Compile error at [2022-04-26T06:33:46.103Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/19107/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19805/ : FAILURE

Compile error at [2022-04-26T06:40:12.154Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19805/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18763/ : FAILURE

Compile error at [2022-04-26T06:37:14.769Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/tests/testapp/testapp_elixir.cc:93:58:
error: no matching function for call to ?SetBucketComputeUnitThrottleLimitCommand::SetBucketComputeUnitThrottleLimitCommand(<brace-enclosed initializer list>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18763/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27178/ : FAILURE

Compile error at [2022-04-26T06:41:37.219Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/tests/testapp/testapp_elixir.cc:92:38:
error: no matching constructor for initialization of "SetBucketComputeUnitThrottleLimitCommand"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/27178/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38327/ : UNSTABLE

Clang Analyser identified one or more potential bugs - see <a href="clangScanBuildBugs">clangScanBuildBugs</a> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38327/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15947/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
